feat: add grid-size buttons functionality

--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
     
     <div class="btn-container">
         <button id="clear-btn">clear</button>
-        <button id="8x8-btn">8x8</button>
-        <button id="16x16-btn">16x16</button>
-        <button id="32x32-btn">32x32</button>
+        <button id="eight-btn" value="8">8x8</button>
+        <button id="sixteen-btn" value="16">16x16</button>
+        <button id="thirtytwo-btn" value="32">32x32</button>
+        <button id="sixtyfour-btn" value="64">64x64</button>
         <button id="custom-btn">custom</button>
         <input class="color-choice "type="color" id="color-picker" value="#fff000">
         <button id="random-btn">random</button>
