--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     
     <div class="grid-container"></div>
 
+    <button id="grid-btn">grid</button>
+
     <script src="script.js"></script>
 </body>
 </html>
