feat: add eraser function

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <button id="custom-btn">custom</button>
         <input class="color-choice "type="color" id="color-picker" value="#fff000">
         <button id="random-btn">random</button>
+        <button id="eraser-btn">eraser</button>
     </div>
     
     <div class="grid-container"></div>
