add shading function; refactor code

--- a/index.html
+++ b/index.html
@@ -17,9 +17,12 @@
         <button id="thirtytwo-btn" value="32">32x32</button>
         <button id="sixtyfour-btn" value="64">64x64</button>
         <button id="custom-btn">custom</button>
+        <button id="draw-btn">draw</button>
         <input class="color-choice "type="color" id="color-picker" value="#fff000">
         <button id="random-btn">random</button>
         <button id="eraser-btn">eraser</button>
+        <button id="shade-btn">shade</button>
+        <button id="lighten-btn">lighten</button>
     </div>
     
   
