feat: add toggle for light/dark shade

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
         <button id="random-btn">random</button>
         <button id="eraser-btn">eraser</button>
         <button id="shade-btn">shade</button>
-        <button id="lighten-btn">lighten</button>
+        <button id="lighter-btn">lighter</button>
+        <button id="darker-btn">darker</button>
     </div>
     
   
