--- a/index.html
+++ b/index.html
@@ -9,28 +9,33 @@
 </head>
 <body>
     <div class="header"><h1>etch-a-sketch</h1></div>
-    
-    <div class="btn-container">
-        <button id="clear-btn">clear</button>
-        <button id="eight-btn" value="8">8x8</button>
-        <button id="sixteen-btn" value="16">16x16</button>
-        <button id="thirtytwo-btn" value="32">32x32</button>
-        <button id="sixtyfour-btn" value="64">64x64</button>
-        <button id="custom-btn">custom</button>
-        <button id="draw-btn">draw</button>
-        <input class="color-choice "type="color" id="color-picker" value="#fff000">
-        <button id="random-btn">random</button>
-        <button id="eraser-btn">eraser</button>
-        <button id="shade-btn">shade</button>
-        <button id="lighter-btn">lighter</button>
-        <button id="darker-btn">darker</button>
+
+    <div class="container">
+
+        <div class="gridbtns-container">
+            <button id="clear-btn">clear</button>
+            <button id="eight-btn" value="8">8x8</button>
+            <button id="sixteen-btn" value="16">16x16</button>
+            <button id="thirtytwo-btn" value="32">32x32</button>
+            <button id="sixtyfour-btn" value="64">64x64</button>
+            <button id="grid-btn">grid</button>
+        </div>
+
+        <div class="grid-container"></div>
+
+
+        <div class="colorbtns-container">
+            <button id="draw-btn">draw</button>
+            <input class="color-choice "type="color" id="color-picker" value="#fff000">
+            <button id="random-btn">random</button>
+            <button id="eraser-btn">eraser</button>
+            <button id="shade-btn">shade</button>
+            <button id="lighter-btn">lighter</button>
+            <button id="darker-btn">darker</button>
+        </div>
     </div>
-    
-  
-    <div class="grid-container"></div>
+   
 
-
-    <button id="grid-btn">grid</button>
 
     <script src="script.js"></script>
 </body>
