--- a/index.html
+++ b/index.html
@@ -4,16 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Etch-A-Sketch</title>
-    
+    <title>Pixel Sketch</title>
     <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="header"><h1>etch-a-sketch</h1></div>    
+    <div class="header"><h1>pixel sketch</h1></div>    
 
     <div class="container">
-
         <div class="gridbtns-container">
             <button id="clear-btn">Clear</button>
             <hr>
@@ -24,19 +22,12 @@
             <hr>
             <button id="grid-btn">Toggle Grid</button>
         </div>
-
         <div class="grid-container"></div>
-
-
         <div class="colorbtns-container">
-            <button id="draw-btn">
-            
-            </button>
+            <button id="draw-btn"></button>
             <input class="color-choice "type="color" id="color-picker" value="#fff000">
             <button id="random-btn"></button>
-            <button id="eraser-btn">
-                <i class="fa fa-eraser"></i>
-            </button>
+            <button id="eraser-btn"></button>
             <hr>
             <div class="filterbtns-container">
                 <button id="blur-btn">Blur</button>
@@ -55,7 +46,6 @@
         </div>
     </div>
    
-
 
     <script src="script.js"></script>
 </body>
