--- a/index.html
+++ b/index.html
@@ -13,32 +13,32 @@
 
     <div class="container">
         <div class="gridbtns-container">
-            <button id="clear-btn">Clear</button>
+            <button id="clear-btn" class="shadow-el">Clear</button>
             <hr>
-            <button id="eight-btn" value="8">8x8</button>
-            <button id="sixteen-btn" value="16">16x16</button>
-            <button id="thirtytwo-btn" value="32">32x32</button>
-            <button id="sixtyfour-btn" value="64">64x64</button>
+            <button id="eight-btn" value="8" class="shadow-el">8x8</button>
+            <button id="sixteen-btn" value="16" class="shadow-el">16x16</button>
+            <button id="thirtytwo-btn" value="32" class="shadow-el">32x32</button>
+            <button id="sixtyfour-btn" value="64" class="shadow-el">64x64</button>
             <hr>
-            <button id="grid-btn">Toggle Grid</button>
+            <button id="grid-btn" class="shadow-el">Toggle Grid</button>
         </div>
-        <div class="grid-container"></div>
+        <div class="grid-container shadow-el"></div>
         <div class="colorbtns-container">
-            <button id="draw-btn"></button>
-            <input class="color-choice "type="color" id="color-picker" value="#fff000">
-            <button id="random-btn"></button>
-            <button id="eraser-btn"></button>
+            <button id="draw-btn" class="shadow-el"></button>
+            <input class="color-choice shadow-el "type="color" id="color-picker" value="#fff000">
+            <button id="random-btn" class="shadow-el"></button>
+            <button id="eraser-btn" class="shadow-el"></button>
             <hr>
             <div class="filterbtns-container">
-                <button id="blur-btn">Blur</button>
+                <button id="blur-btn" class="shadow-el">Blur</button>
                 <hr>
-                <button id="shade-btn">Shade</button>
+                <button id="shade-btn" class="shadow-el"">Shade</button>
             </div>
             <div class="shadebtns-container">
-                <button id="lighter-btn">
+                <button id="lighter-btn" class="shadow-el">
                     lighter
                 </button>
-                <button id="darker-btn">
+                <button id="darker-btn" class="shadow-el">
                     darker
                 </button>
             </div>
