refactor: add type attribute to buttons

--- a/index.html
+++ b/index.html
@@ -13,34 +13,30 @@
 
     <div class="container">
         <div class="gridbtns-container">
-            <button id="clear-btn" class="shadow-el">Clear</button>
+            <button id="clear-btn" class="shadow-el" type="button">Clear</button>
             <hr>
-            <button id="eight-btn" value="8" class="shadow-el">8x8</button>
-            <button id="sixteen-btn" value="16" class="shadow-el">16x16</button>
-            <button id="thirtytwo-btn" value="32" class="shadow-el">32x32</button>
-            <button id="sixtyfour-btn" value="64" class="shadow-el">64x64</button>
+            <button id="eight-btn" value="8" class="shadow-el" type="button">8x8</button>
+            <button id="sixteen-btn" value="16" class="shadow-el" type="button">16x16</button>
+            <button id="thirtytwo-btn" value="32" class="shadow-el" type="button">32x32</button>
+            <button id="sixtyfour-btn" value="64" class="shadow-el" type="button">64x64</button>
             <hr>
-            <button id="grid-btn" class="shadow-el">Toggle Grid</button>
+            <button id="grid-btn" class="shadow-el" type="button">Toggle Grid</button>
         </div>
         <div class="grid-container shadow-el"></div>
         <div class="colorbtns-container">
-            <button id="draw-btn" class="shadow-el"></button>
+            <button id="draw-btn" class="shadow-el" type="button"></button>
             <input class="color-choice shadow-el "type="color" id="color-picker" value="#fff000">
-            <button id="random-btn" class="shadow-el"></button>
-            <button id="eraser-btn" class="shadow-el"></button>
+            <button id="random-btn" class="shadow-el" type="button"></button>
+            <button id="eraser-btn" class="shadow-el" type="button"></button>
             <hr>
             <div class="filterbtns-container">
-                <button id="blur-btn" class="shadow-el">Blur</button>
+                <button id="blur-btn" class="shadow-el" type="button">Blur</button>
                 <hr>
-                <button id="shade-btn" class="shadow-el"">Shade</button>
+                <button id="shade-btn" class="shadow-el" type="button">Shade</button>
             </div>
             <div class="shadebtns-container">
-                <button id="lighter-btn" class="shadow-el">
-                    lighter
-                </button>
-                <button id="darker-btn" class="shadow-el">
-                    darker
-                </button>
+                <button id="lighter-btn" class="shadow-el" type="button">lighter</button>
+                <button id="darker-btn" class="shadow-el" type="button">darker</button>
             </div>
             
         </div>
