--- a/index.html
+++ b/index.html
@@ -13,30 +13,30 @@
 
     <div class="container">
         <div class="gridbtns-container">
-            <button id="clear-btn" class="shadow-el" type="button">Clear</button>
+            <button class="clear-btn shadow-el" type="button">Clear</button>
             <hr>
-            <button id="eight-btn" value="8" class="shadow-el" type="button">8x8</button>
-            <button id="sixteen-btn" value="16" class="shadow-el" type="button">16x16</button>
-            <button id="thirtytwo-btn" value="32" class="shadow-el" type="button">32x32</button>
-            <button id="sixtyfour-btn" value="64" class="shadow-el" type="button">64x64</button>
+            <button class="eight-btn shadow-el" value="8" type="button">8x8</button>
+            <button class="sixteen-btn shadow-el" value="16" type="button">16x16</button>
+            <button class="thirtytwo-btn shadow-el" value="32" type="button">32x32</button>
+            <button class="sixtyfour-btn shadow-el" value="64" type="button">64x64</button>
             <hr>
-            <button id="grid-btn" class="shadow-el" type="button">Toggle Grid</button>
+            <button class="grid-btn shadow-el" type="button">Toggle Grid</button>
         </div>
         <div class="grid-container shadow-el"></div>
         <div class="colorbtns-container">
-            <button id="draw-btn" class="shadow-el" type="button"></button>
-            <input class="color-choice shadow-el "type="color" id="color-picker" value="#fff000">
-            <button id="random-btn" class="shadow-el" type="button"></button>
-            <button id="eraser-btn" class="shadow-el" type="button"></button>
+            <button class="draw-btn shadow-el" type="button"></button>
+            <input class="color-picker color-choice shadow-el" type="color" value="#fff000">
+            <button class="random-btn shadow-el" type="button"></button>
+            <button class="eraser-btn shadow-el" type="button"></button>
             <hr>
             <div class="filterbtns-container">
-                <button id="blur-btn" class="shadow-el" type="button">Blur</button>
+                <button class="blur-btn shadow-el" type="button">Blur</button>
                 <hr>
-                <button id="shade-btn" class="shadow-el" type="button">Shade</button>
+                <button class="shade-btn shadow-el" type="button">Shade</button>
             </div>
             <div class="shadebtns-container">
-                <button id="lighter-btn" class="shadow-el" type="button">lighter</button>
-                <button id="darker-btn" class="shadow-el" type="button">darker</button>
+                <button class="lighter-btn shadow-el" type="button">lighter</button>
+                <button class="darker-btn shadow-el" type="button">darker</button>
             </div>
             
         </div>
