refactor: add label for color picker

--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
         <div class="app-container">
             <div class="colorbtns-container">
                 <button class="draw-btn shadow-el" type="button"></button>
-                <input class="color-picker color-choice shadow-el" type="color" value="#fff000">
+                
+                <label for="color-picker">
+                    <div class="color-btn shadow-el"></div>
+                </label>
+                <input class="color-picker color-choice shadow-el" type="color" id="color-picker" value="#ff0000"> 
+    
                 <button class="rainbow-btn shadow-el" type="button"></button>
                 <button class="eraser-btn shadow-el" type="button"></button>
                 <button class="blur-btn shadow-el" type="button"></button>
