refactor: modify filter modes; use filter objects

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <button class="rainbow-btn img-btn shadow-el" type="button"></button>
                 <button class="eraser-btn img-btn shadow-el" type="button"></button>
                 <button class="blur-btn img-btn shadow-el" type="button"></button>
-                <button class="sepia-btn img-btn shadow-el" type="button"></button>
+                <button class="gridshape-btn img-btn shadow-el" type="button"></button>
                 <button class="brighter-btn img-btn shadow-el" type="button"></button>
                 <button class="darker-btn img-btn shadow-el" type="button"></button>
                 <div class="spacer-btn img-btn"></div>
@@ -45,7 +45,7 @@
                     <button class="sixteen-btn shadow-el grid-btns" value="16" type="button">16x16</button>
                     <button class="thirtytwo-btn shadow-el grid-btns" value="32" type="button">32x32</button>
                     <button class="sixtyfour-btn shadow-el grid-btns" value="64" type="button">64x64</button>
-                    <button class="onetwentyeight-btn shadow-el grid-btns" value="128" type="button">128x128</button>
+                    <button class="backlight-btn shadow-el grid-btns" type="button"></button>
                     <button class="grid-btn shadow-el grid-btns active-btn" type="button">Grid</button>
                 </div>
             </div>
